# pubnet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  render.yaml
src/pubnet/: __init__.py  analyze.py  cli.py  config.py  crossref.py  fetch.py  formatters.py  journal_if.py  models.py  report.py
src/pubnet/data/: demo.json  scimago.csv
src/pubnet/gui/: __init__.py  app.py  callbacks.py  layouts.py
src/pubnet/gui/assets/: style.css  toggle_refs.js
src/pubnet/gui/components/: __init__.py  clusters.py  network.py  pub_table.py  pubs_per_year.py  stat_cards.py  trends.py
src/pubnet/templates/: report.html
tests/: conftest.py  test_analyze.py  test_callbacks.py  test_cli.py  test_fetch.py  test_formatters.py  test_gui.py  test_journal_if.py  test_models.py  test_report.py
