[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubnetwork"
version = "0.1.3"
description = "Publication network analyser - co-author graphs, citation trends, topic clusters from Google Scholar"
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
authors = [
    { name = "Sanjiv Kumar", email = "drsanjivk@gmail.com" },
]
dependencies = [
    "scholarly>=1.7",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "networkx>=3.0",
    "pyvis>=0.3",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "click>=8.0",
    "jinja2>=3.0",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "dash-cytoscape>=1.0",
    "requests>=2.28",
    "gunicorn>=21.2; sys_platform != 'win32'",
    "google-search-results>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
pubnet = "pubnet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pubnet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
